[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/Cow.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Ufo.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/HammerLevel.gd" type="Script" id=3]
[ext_resource path="res://script/TouchScreenButton.gd" type="Script" id=4]
[ext_resource path="res://script/Light.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/InformationLevel.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/LevelFailed.tscn" type="PackedScene" id=9]
[ext_resource path="res://script/TouchRight.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2.95978, 232.87 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 819, 531 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ufo/Control:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 575.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "abduct"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Cow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 819, 531 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ufo/Control:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1460.0, 60.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("UI/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.517647 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "failLow"
length = 4.4
tracks/0/type = "value"
tracks/0/path = NodePath("Cow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 814, 532 ), Vector2( 816, 440 ), Vector2( 815, 531 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ufo/Control:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4, 2.6, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 575.0, 488.0, 579.0, 166.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "failMedium"
length = 4.8
tracks/0/type = "value"
tracks/0/path = NodePath("Cow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 815, 532 ), Vector2( 817, 311 ), Vector2( 817, 530 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ufo/Control:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3.4, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 578.0, 376.0, 580.0, 166.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "light"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Ufo/Control:margin_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 166.0, 1457.0 ]
}

[node name="HammerLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="CountDown" type="Label" parent="UI" groups=["countdown"]]
margin_left = 504.0
margin_top = 56.0
margin_right = 504.0
margin_bottom = 70.0
rect_scale = Vector2( 6, 6 )
align = 1
valign = 1

[node name="go" type="Label" parent="UI" groups=["go"]]
anchor_right = 0.062
margin_left = 238.0
margin_top = 39.0
margin_right = 278.0
margin_bottom = 53.0
rect_scale = Vector2( 6, 6 )

[node name="ColorRect" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="TouchLeft" type="TouchScreenButton" parent="UI"]
position = Vector2( 52, 503 )
normal = ExtResource( 6 )
action = "touchLeft"
script = ExtResource( 4 )

[node name="TouchRight" type="TouchScreenButton" parent="UI"]
position = Vector2( 171, 503 )
normal = ExtResource( 6 )
action = "touchRight"
script = ExtResource( 10 )

[node name="Cow" parent="." instance=ExtResource( 1 )]
position = Vector2( 819, 531 )

[node name="Ufo" parent="." instance=ExtResource( 2 )]
position = Vector2( 818, 148 )

[node name="Control" type="Control" parent="Ufo"]
margin_left = -217.0
margin_top = 60.0
margin_right = 253.0
margin_bottom = 575.0
rect_clip_content = true

[node name="Light" parent="Ufo/Control" instance=ExtResource( 7 )]
position = Vector2( 222.125, 623.333 )
scale = Vector2( 0.940899, 2.81775 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Ufo/Control/Light"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ufo/Control/Light/Area2D"]
position = Vector2( 0, 30.6883 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/abduct = SubResource( 2 )
anims/fade = SubResource( 6 )
anims/failLow = SubResource( 3 )
anims/failMedium = SubResource( 4 )
anims/light = SubResource( 5 )

[node name="TimerCountDown" type="Timer" parent="."]
autostart = true

[node name="TimerStart" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerGo" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerTimeGame" type="Timer" parent="."]
wait_time = 80.0
one_shot = true

[node name="TimerAbduct" type="Timer" parent="."]
wait_time = 4.3
one_shot = true

[node name="TimerFailMedium" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TimerFailLow" type="Timer" parent="."]
wait_time = 4.6

[node name="InformationLevel" parent="." instance=ExtResource( 8 )]
visible = false

[node name="LevelFailed" parent="." instance=ExtResource( 9 )]
visible = false

[node name="TimerPositionCow" type="Timer" parent="."]
wait_time = 2.0

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="Ufo/Control/Light/Area2D" to="Ufo/Control/Light" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="TimerCountDown" to="." method="_on_TimerCountDown_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="timeout" from="TimerGo" to="." method="_on_TimerGo_timeout"]
[connection signal="timeout" from="TimerTimeGame" to="." method="_on_TimerTimeGame_timeout"]
[connection signal="timeout" from="TimerAbduct" to="." method="_on_TimerAbduct_timeout"]
[connection signal="timeout" from="TimerFailMedium" to="." method="_on_TimerFailMedium_timeout"]
[connection signal="timeout" from="TimerFailLow" to="." method="_on_TimerFailLow_timeout"]
[connection signal="timeout" from="TimerPositionCow" to="." method="_on_TimerPositionCow_timeout"]
