[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/entity/onvi2.png" type="Texture" id=1]
[ext_resource path="res://assets/Arcane Nine.otf" type="DynamicFontData" id=2]
[ext_resource path="res://script/HammerLevel.gd" type="Script" id=3]
[ext_resource path="res://script/TouchScreenButton.gd" type="Script" id=4]
[ext_resource path="res://script/Light.gd" type="Script" id=5]
[ext_resource path="res://assets/SinPulsar.png" type="Texture" id=6]
[ext_resource path="res://assets/entity/luz.png" type="Texture" id=7]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Animal.tscn" type="PackedScene" id=9]
[ext_resource path="res://script/TouchRight.gd" type="Script" id=10]
[ext_resource path="res://script/TouchAbduction.gd" type="Script" id=11]
[ext_resource path="res://assets/Fondo_Granja.png" type="Texture" id=12]
[ext_resource path="res://assets/Flecha.png" type="Texture" id=13]
[ext_resource path="res://scenes/InformationLevel.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/UI/PNG/Buttons/BTNs/Backward_BTN.png" type="Texture" id=15]
[ext_resource path="res://assets/UI/PNG/Buttons/BTNs/Forward_BTN.png" type="Texture" id=16]
[ext_resource path="res://assets/UI/PNG/Buttons/BTNs/Hangar_BTN.png" type="Texture" id=17]
[ext_resource path="res://script/InformationHammerLevel.gd" type="Script" id=18]

[sub_resource type="DynamicFont" id=9]
size = 61
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.15619, 237.346 )

[sub_resource type="DynamicFont" id=10]
size = 67
font_data = ExtResource( 2 )

[node name="HammerLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -713.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 1

[node name="CountDown" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.0
margin_right = 6.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="Control2" type="Control" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -800.0
margin_right = 1400.0

[node name="TouchLeft" type="TouchScreenButton" parent="UI/Control2"]
position = Vector2( 240, 634 )
rotation = 3.14159
scale = Vector2( 0.667683, 0.696517 )
normal = ExtResource( 13 )
action = "touchLeft"
script = ExtResource( 4 )

[node name="TouchRight" type="TouchScreenButton" parent="UI/Control2"]
position = Vector2( 93, 648 )
scale = Vector2( 0.668, 0.697 )
normal = ExtResource( 13 )
action = "touchRight"
script = ExtResource( 10 )

[node name="Control3" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1400.0
margin_top = -800.0

[node name="TouchAbduction" type="TouchScreenButton" parent="UI/Control3"]
position = Vector2( 1232, 579 )
scale = Vector2( 0.52901, 0.654804 )
normal = ExtResource( 6 )
action = "abduction"
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="Cow" parent="." instance=ExtResource( 9 )]
position = Vector2( 819, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/cow.png"

[node name="Chicken" parent="." instance=ExtResource( 9 )]
position = Vector2( 1012, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/chicken.png"

[node name="Panda" parent="." instance=ExtResource( 9 )]
position = Vector2( 575, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/panda.png"

[node name="Zebra" parent="." instance=ExtResource( 9 )]
position = Vector2( 1154, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/zebra.png"

[node name="StaticBody2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 261, 97 )

[node name="Ufo" type="Sprite" parent="."]
position = Vector2( 813, 283 )
scale = Vector2( 0.280802, 0.254218 )
texture = ExtResource( 1 )

[node name="Light" type="Sprite" parent="Ufo"]
position = Vector2( 3.18652, 67.0938 )
scale = Vector2( 0.697964, -0.000697471 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Ufo/Light"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ufo/Light/Area2D"]
position = Vector2( 2.07861, 23.9139 )
shape = SubResource( 7 )

[node name="TimerAbduct" type="Timer" parent="Ufo/Light"]
wait_time = 4.0
one_shot = true

[node name="TimerReturnLight" type="Timer" parent="Ufo/Light"]
wait_time = 2.0
one_shot = true

[node name="TimerCountDown" type="Timer" parent="."]
autostart = true

[node name="TimerStart" type="Timer" parent="."]
wait_time = 2.79
one_shot = true
autostart = true

[node name="TimerGo" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerTimeGame" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerFail" type="Timer" parent="."]
wait_time = 4.2

[node name="TimerWinnerOne" type="Timer" parent="."]
wait_time = 3.88

[node name="TimerWinnerTwo" type="Timer" parent="."]
wait_time = 3.88

[node name="TimerWinnerThree" type="Timer" parent="."]
wait_time = 3.88

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="InformationLevel" parent="." instance=ExtResource( 14 )]
script = ExtResource( 18 )

[node name="Information" type="Control" parent="InformationLevel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Title" type="Label" parent="InformationLevel/Information"]
margin_left = -176.0
margin_top = -168.0
margin_right = 271.0
margin_bottom = -91.0
custom_fonts/font = SubResource( 10 )
text = "Abduce a la vaca"

[node name="Movement" type="Label" parent="InformationLevel/Information"]
margin_left = -530.0
margin_top = -75.0
margin_right = -191.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 10 )
text = "Movimiento"

[node name="Left" type="Sprite" parent="InformationLevel/Information/Movement"]
position = Vector2( 79, 161.5 )
scale = Vector2( 0.609524, 0.557143 )
texture = ExtResource( 15 )

[node name="Right" type="Sprite" parent="InformationLevel/Information/Movement"]
position = Vector2( 287, 161.5 )
scale = Vector2( 0.609524, 0.557143 )
texture = ExtResource( 16 )

[node name="Abducir" type="Label" parent="InformationLevel/Information"]
margin_left = 260.0
margin_top = -78.0
margin_right = 485.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 10 )
text = "Abducir"

[node name="Abduct" type="Sprite" parent="InformationLevel/Information/Abducir"]
position = Vector2( 127, 164.5 )
scale = Vector2( 0.609524, 0.557143 )
texture = ExtResource( 17 )

[connection signal="pressed" from="UI/Control2/TouchLeft" to="UI/Control2/TouchLeft" method="_on_TouchLeft_pressed"]
[connection signal="pressed" from="UI/Control2/TouchRight" to="UI/Control2/TouchRight" method="_on_TouchRight_pressed"]
[connection signal="pressed" from="UI/Control3/TouchAbduction" to="UI/Control3/TouchAbduction" method="_on_TouchAbduction_pressed"]
[connection signal="body_entered" from="Ufo/Light/Area2D" to="Ufo/Light" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Ufo/Light/TimerAbduct" to="UI/Control3/TouchAbduction" method="_on_TimerAbduct_timeout"]
[connection signal="timeout" from="Ufo/Light/TimerReturnLight" to="UI/Control3/TouchAbduction" method="_on_TimerReturnLight_timeout"]
[connection signal="timeout" from="TimerCountDown" to="." method="_on_TimerCountDown_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="timeout" from="TimerGo" to="." method="_on_TimerGo_timeout"]
[connection signal="timeout" from="TimerTimeGame" to="." method="_on_TimerTimeGame_timeout"]
[connection signal="timeout" from="TimerFail" to="." method="_on_TimerFail_timeout"]
[connection signal="timeout" from="TimerWinnerOne" to="." method="_on_TimerWinnerOne_timeout"]
[connection signal="timeout" from="TimerWinnerTwo" to="." method="_on_TimerWinnerTwo_timeout"]
[connection signal="timeout" from="TimerWinnerThree" to="." method="_on_TimerWinnerThree_timeout"]
