[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/entity/onvi2.png" type="Texture" id=1]
[ext_resource path="res://assets/Arcane Nine.otf" type="DynamicFontData" id=2]
[ext_resource path="res://script/HammerLevel.gd" type="Script" id=3]
[ext_resource path="res://assets/abduccion.png" type="Texture" id=4]
[ext_resource path="res://script/Light.gd" type="Script" id=5]
[ext_resource path="res://assets/boton_joystick.png" type="Texture" id=6]
[ext_resource path="res://assets/entity/luz.png" type="Texture" id=7]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Animal.tscn" type="PackedScene" id=9]
[ext_resource path="res://script/Cloud.gd" type="Script" id=10]
[ext_resource path="res://script/TouchAbduction.gd" type="Script" id=11]
[ext_resource path="res://assets/Fondo_Granja.png" type="Texture" id=12]
[ext_resource path="res://assets/storm cloud/storm cloud.png" type="Texture" id=13]
[ext_resource path="res://scenes/InformationLevel.tscn" type="PackedScene" id=14]
[ext_resource path="res://script/InformationHammerLevel.gd" type="Script" id=18]
[ext_resource path="res://scenes/virtual_joystick.tscn" type="PackedScene" id=19]
[ext_resource path="res://script/Ufo.gd" type="Script" id=20]

[sub_resource type="DynamicFont" id=9]
size = 61
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.15619, 237.346 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 232.5, 70.7143 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 103.175
height = 0.0

[sub_resource type="DynamicFont" id=10]
size = 67
font_data = ExtResource( 2 )

[node name="UfoLevel1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -713.0
texture = ExtResource( 12 )
expand = true

[node name="CountDown" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.0
margin_right = 6.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="ControlTouchAbduction" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1400.0
margin_top = -800.0

[node name="TouchAbduction" type="TouchScreenButton" parent="ControlTouchAbduction"]
position = Vector2( 1222, 565 )
scale = Vector2( 0.747619, 1.01429 )
normal = ExtResource( 4 )
action = "abduction"
script = ExtResource( 11 )

[node name="AnimalsResponsive" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -700.0
margin_top = -800.0
margin_right = 700.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StaticBody2D" parent="AnimalsResponsive" instance=ExtResource( 8 )]
position = Vector2( 182, 135 )
scale = Vector2( 1.05, 1 )

[node name="UfoResponsive" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -700.0
margin_right = 700.0
margin_bottom = 800.0

[node name="Ufo" type="Sprite" parent="UfoResponsive"]
position = Vector2( 813, 133 )
scale = Vector2( 0.6, 0.7 )
texture = ExtResource( 1 )
script = ExtResource( 20 )

[node name="Light" type="Sprite" parent="UfoResponsive/Ufo"]
position = Vector2( 3.18652, -30.7631 )
scale = Vector2( 0.697964, -0.00274498 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="UfoResponsive/Ufo/Light"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UfoResponsive/Ufo/Light/Area2D"]
position = Vector2( 2.07861, 23.9141 )
shape = SubResource( 7 )

[node name="TimerAbduct" type="Timer" parent="UfoResponsive/Ufo/Light"]
wait_time = 4.0
one_shot = true

[node name="TimerReturnLight" type="Timer" parent="UfoResponsive/Ufo/Light"]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="UfoResponsive/Ufo"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="UfoResponsive/Ufo/Area2D"]
position = Vector2( 4.16638, -0.714279 )
shape = SubResource( 12 )

[node name="Cow" parent="." instance=ExtResource( 9 )]
position = Vector2( 819, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/cow.png"

[node name="Chicken" parent="." instance=ExtResource( 9 )]
position = Vector2( 1012, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/chicken.png"

[node name="Panda" parent="." instance=ExtResource( 9 )]
position = Vector2( 575, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/panda.png"

[node name="Chick" parent="." instance=ExtResource( 9 )]
position = Vector2( 1154, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/chick.png"

[node name="Cloud" type="KinematicBody2D" parent="."]
position = Vector2( 0, 20 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 10 )
speed = 4

[node name="Body" type="Sprite" parent="Cloud"]
position = Vector2( 1174, 81.25 )
scale = Vector2( 0.563333, 0.51875 )
texture = ExtResource( 13 )
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cloud"]
position = Vector2( 1180, 86 )
scale = Vector2( 1.26, 0.88875 )
shape = SubResource( 11 )

[node name="WallCloud" parent="." instance=ExtResource( 8 )]
position = Vector2( -109, 36 )
scale = Vector2( 1.54, 0.5 )
collision_layer = 8
collision_mask = 8

[node name="TransitionFinish" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 5.0
color = Color( 0, 0, 0, 0 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control2" type="Control" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -800.0
margin_right = 1400.0

[node name="TimerCountDown" type="Timer" parent="."]
autostart = true

[node name="TimerStart" type="Timer" parent="."]
wait_time = 2.79
one_shot = true
autostart = true

[node name="TimerGo" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerTimeGame" type="Timer" parent="."]
wait_time = 900.0
one_shot = true

[node name="TimerFail" type="Timer" parent="."]
wait_time = 4.2

[node name="TimerWinnerOne" type="Timer" parent="."]
wait_time = 3.88

[node name="TimerWinnerTwo" type="Timer" parent="."]
wait_time = 3.88

[node name="TimerWinnerThree" type="Timer" parent="."]
wait_time = 3.88

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Glitch" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.0627451, 0.0627451, 0 )

[node name="Virtual joystick" parent="." instance=ExtResource( 19 )]

[node name="InformationLevel" parent="." instance=ExtResource( 14 )]
script = ExtResource( 18 )

[node name="Information" type="Control" parent="InformationLevel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Title" type="Label" parent="InformationLevel/Information"]
margin_left = -176.0
margin_top = -168.0
margin_right = 271.0
margin_bottom = -91.0
custom_fonts/font = SubResource( 10 )
text = "Abduce a la vaca"

[node name="Movement" type="Label" parent="InformationLevel/Information"]
margin_left = -530.0
margin_top = -75.0
margin_right = -191.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 10 )
text = "Movimiento"

[node name="Joystick" type="Sprite" parent="InformationLevel/Information/Movement"]
position = Vector2( 172.75, 166.25 )
scale = Vector2( 0.874449, 0.795871 )
texture = ExtResource( 6 )

[node name="Abducir" type="Label" parent="InformationLevel/Information"]
margin_left = 316.0
margin_top = -78.0
margin_right = 541.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 10 )
text = "Abducir"

[node name="Abduct" type="Sprite" parent="InformationLevel/Information/Abducir"]
position = Vector2( 116, 167 )
scale = Vector2( 0.780952, 0.719048 )
texture = ExtResource( 4 )

[connection signal="pressed" from="ControlTouchAbduction/TouchAbduction" to="ControlTouchAbduction/TouchAbduction" method="_on_TouchAbduction_pressed"]
[connection signal="body_entered" from="UfoResponsive/Ufo/Light/Area2D" to="UfoResponsive/Ufo/Light" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="UfoResponsive/Ufo/Light/TimerAbduct" to="ControlTouchAbduction/TouchAbduction" method="_on_TimerAbduct_timeout"]
[connection signal="timeout" from="UfoResponsive/Ufo/Light/TimerReturnLight" to="ControlTouchAbduction/TouchAbduction" method="_on_TimerReturnLight_timeout"]
[connection signal="body_entered" from="UfoResponsive/Ufo/Area2D" to="UfoResponsive/Ufo" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="UfoResponsive/Ufo/Area2D" to="UfoResponsive/Ufo" method="_on_Area2D_body_exited"]
[connection signal="timeout" from="TimerCountDown" to="." method="_on_TimerCountDown_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="timeout" from="TimerGo" to="." method="_on_TimerGo_timeout"]
[connection signal="timeout" from="TimerTimeGame" to="." method="_on_TimerTimeGame_timeout"]
[connection signal="timeout" from="TimerFail" to="." method="_on_TimerFail_timeout"]
[connection signal="timeout" from="TimerWinnerOne" to="." method="_on_TimerWinnerOne_timeout"]
[connection signal="timeout" from="TimerWinnerTwo" to="." method="_on_TimerWinnerTwo_timeout"]
[connection signal="timeout" from="TimerWinnerThree" to="." method="_on_TimerWinnerThree_timeout"]
